<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/ui_theme_a797e3">
        <dev.oneuiproject.oneui.preference.HorizontalRadioPreference
            android:key="app_theme"
            app:entries="@array/preferences_darkmode_entries"
            app:entriesImage="@array/preferences_darkmode_entries_image"
            app:entryValues="@array/preferences_darkmode_values"
            app:viewType="image" />
        <SwitchPreferenceCompat
            android:key="theme_system_ui"
            android:title="@string/ui_system_default_9d8d38" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="material_you"
            android:summary="@string/ui_use_the_system_color_palette_when_available_4e7ae2"
            android:title="@string/ui_material_you_66eb00" />
    </PreferenceCategory>

</PreferenceScreen>
